--- a/TensorFlow_with_GPU.ipynb
+++ b/TensorFlow_with_GPU.ipynb
@@ -149,6 +149,10 @@
     "id": "EY6rTv2TwG6S"
    },
    "source": [
+    "__GTX1080, i7, 16G RAM __\n",
+    "GTX 1080:\n",
+    "GPU: 0.06261710023253642\n",
+    "\n",
     "__P100, 8 vCPU, 30G RAM (AISE Tensorflow)__\n",
     "CPU (s):\n",
     "3.753480445999969\n",
@@ -168,9 +172,19 @@
     "3.280488042999991\n",
     "GPU (s):\n",
     "0.025573774000008598\n",
-    "GPU speedup over CPU: 128x\n",
+    "GPU speedup over CPU: 128xGTX 1080:\n",
+    "0.06261710023253642\n",
+    "\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -184,7 +198,7 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
