--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -109,17 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\smtah\\Miniconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -179,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -370,13 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_init_cell(batch_size, rnn_size):\n",
+    "def get_init_cell(batch_size, rnn_size, number_of_layers=1):\n",
     "    \"\"\"\n",
     "    Create an RNN Cell and initialize it.\n",
     "    :param batch_size: Size of batches\n",
@@ -384,7 +384,12 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    # Build the LSTM cell\n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * number_of_layers)\n",
+    "    init_state = cell.zero_state(batch_size, tf.float32)\n",
+    "    init_state = tf.identity(init_state, 'initial_state')\n",
+    "    return (cell, init_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -403,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -449,11 +454,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -463,7 +474,9 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, dtype=tf.float32)\n",
+    "    final_state = tf.identity(final_state, name='final_state')\n",
+    "    return (outputs, final_state)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -487,11 +500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -504,7 +523,11 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    embedding_layer = get_embed(input_data, vocab_size, embed_dim)\n",
+    "    (outputs, final_state) = build_rnn(cell, embedding_layer)\n",
+    "    # activation None=linear\n",
+    "    logits = tf.layers.dense(outputs, vocab_size, activation=None)\n",
+    "    return logits, final_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -559,21 +582,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "from sklearn import datasets\n",
+    "\n",
     "def get_batches(int_text, batch_size, seq_length):\n",
-    "    \"\"\"\n",
-    "    Return batches of input and target\n",
-    "    :param int_text: Text with the words replaced by their ids\n",
-    "    :param batch_size: The size of batch\n",
-    "    :param seq_length: The length of sequence\n",
-    "    :return: Batches as a Numpy array\n",
-    "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    chars_per_batch = batch_size * seq_length\n",
+    "    n_batches = len(int_text)//chars_per_batch\n",
+    "    # check what is going on\n",
+    "    print('batch_size : %s'%batch_size)\n",
+    "    print('seq_length : %s'%seq_length)\n",
+    "    print('Number of batches : %s'%n_batches)\n",
+    "   \n",
+    "    input_data = np.array(int_text[:(n_batches * chars_per_batch)])\n",
+    "    target_data = np.array(int_text[1 : (n_batches * chars_per_batch)+1])\n",
+    "    target_data[-1] = input_data[0]\n",
+    "   \n",
+    "    inputs = input_data.reshape(batch_size, -1)\n",
+    "    targets = target_data.reshape(batch_size, -1)\n",
+    "    inputs = np.split(inputs, n_batches, -1)\n",
+    "    targets = np.split(targets, n_batches, -1)\n",
+    "    print('head.inputs',head.inputs)\n",
+    "    print('targets',targets)\n",
+    "   \n",
+    "    batches = np.array(list(zip(inputs, targets)))\n",
+    "    return batches\n",
     "\n",
     "\n",
     "\"\"\"\n",
