Completed All tests passed, script generated, training loss=0.199

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -792,7 +792,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I found that a training loss of between 0.01 and 0.001 gave the best convergence to the training loss.\n",
+    "# I found that a training loss of between 0.01 and 0.001 gave the best \n",
+    "# convergence to the training loss.\n",
     "# Increased the number of epochs to keep the loss reducing\n",
     "# rnn size/batch/embed dim did not reduce loss when more than 256\n",
     "\n",
