extra tests on MNIST

--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -1622,6 +1622,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Post-project improvements\n",
+    "After meeting the rubric, I had some time spare, so I experimented, and made a copy of the notebook so I could add lines to capture the loss and draw the graphs. I used the MNIST images. The losses seemed quite erratic, so I wanted to try some changes the the number of layers in z_dim, and using drop-out.\n",
+    "\n",
+    "### Change number of layers in z_dim\n",
+    "Increasing number of layers did not seem to 'stabilise' the losses, they were still erratic, hard to know if early stopping would have helped.\n",
+    "\n",
+    "64 layers\n",
+    "![64layers](images/64 layers MNIST.png)\n",
+    "![64layers](images/64 layers graph.png)\n",
+    "128 layers\n",
+    "![128layers](images/128 layers MNIST.png)\n",
+    "![64layers](images/128 layers graph.png)\n",
+    "256 layers\n",
+    "![256layers](images/256 layers MNIST.png)\n",
+    "![256layers](images/256 layers graph.png)\n",
+    "\n",
+    "### Add drop-out to discriminator\n",
+    "Two drop-outs\n",
+    "![2 dropout MNIST](images/2 drop MNIST.png)\n",
+    "![2 dropout graph](images/2 drop graph.png)\n",
+    "Three drop-outs\n",
+    "![3 dropout MNIST](images/3 drop MNIST.png)\n",
+    "![3 dropoutgraph](images/3 drop graph.png)\n",
+    "\n",
+    "After running these extra tests on the MNSIT, I finally ran the best huperparameters for the GAN on the CelebA faces:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
