Completed with extra work

--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -1642,14 +1642,18 @@
     "![256layers](images/256 layers graph.png)\n",
     "\n",
     "### Add drop-out to discriminator\n",
-    "Two drop-outs\n",
+    "(after watching the semi-supervised learning tutorial, drop-outs were suggested as a good idea)\n",
+    "Two drop-outs added:\n",
     "![2 dropout MNIST](images/2 drop MNIST.png)\n",
     "![2 dropout graph](images/2 drop graph.png)\n",
-    "Three drop-outs\n",
+    "Three drop-outs added:\n",
     "![3 dropout MNIST](images/3 drop MNIST.png)\n",
     "![3 dropoutgraph](images/3 drop graph.png)\n",
     "\n",
-    "After running these extra tests on the MNSIT, I finally ran the best huperparameters for the GAN on the CelebA faces:\n",
+    "The loss seemed to be more stable, so possibly after more hyper-paramter tuning, a lower loss could be achieved.\n",
+    "\n",
+    "After running these extra tests on the MNIST, I finally ran the best hyperparameters for the GAN on the CelebA faces. However, the loss did not stabilise, so the improvements found using MNIST data did not translate over:\n",
+    "\n",
     "\n",
     "\n",
     "\n",
