--- a/face_generation/dlnd_face_generation.ipynb
+++ b/face_generation/dlnd_face_generation.ipynb
@@ -1652,7 +1652,12 @@
     "\n",
     "The loss seemed to be more stable, so possibly after more hyper-paramter tuning, a lower loss could be achieved.\n",
     "\n",
-    "After running these extra tests on the MNIST, I finally ran the best hyperparameters for the GAN on the CelebA faces. However, the loss did not stabilise, so the improvements found using MNIST data did not translate over:\n",
+    "After running these extra tests on the MNIST, I finally ran the best hyperparameters for the GAN on the CelebA faces. However, the loss did not stabilise, so the improvements found using MNIST data did not translate over, so I will need to do some more research ...\n",
+    "\n",
+    "\n",
+    "\n",
+    "![CelebA 2 drop Faces](images/CelebA 2 drop Faces.png)\n",
+    "![CelebA 2 drop Graph](images/CelebA 2 drop Graph.png)\n",
     "\n",
     "\n",
     "\n",
