Added Gluon multi-GPU

--- a/Multi GPU/Training with multiple GPUs from scratch.ipynb
+++ b/Multi GPU/Training with multiple GPUs from scratch.ipynb
@@ -124,6 +124,280 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mxnet import gluon\n",
+    "# initialize parameters\n",
+    "scale = .01\n",
+    "W1 = nd.random_normal(shape=(20,1,3,3))*scale\n",
+    "b1 = nd.zeros(shape=20)\n",
+    "W2 = nd.random_normal(shape=(50,20,5,5))*scale\n",
+    "b2 = nd.zeros(shape=50)\n",
+    "W3 = nd.random_normal(shape=(800,128))*scale\n",
+    "b3 = nd.zeros(shape=128)\n",
+    "W4 = nd.random_normal(shape=(128,10))*scale\n",
+    "b4 = nd.zeros(shape=10)\n",
+    "params = [W1, b1, W2, b2, W3, b3, W4, b4]\n",
+    "\n",
+    "# network and loss\n",
+    "def lenet(X, params):\n",
+    "    # first conv\n",
+    "    h1_conv = nd.Convolution(data=X, weight=params[0], bias=params[1], kernel=(3,3), num_filter=20)\n",
+    "    h1_activation = nd.relu(h1_conv)\n",
+    "    h1 = nd.Pooling(data=h1_activation, pool_type=\"max\", kernel=(2,2), stride=(2,2))\n",
+    "    # second conv\n",
+    "    h2_conv = nd.Convolution(data=h1, weight=params[2], bias=params[3], kernel=(5,5), num_filter=50)\n",
+    "    h2_activation = nd.relu(h2_conv)\n",
+    "    h2 = nd.Pooling(data=h2_activation, pool_type=\"max\", kernel=(2,2), stride=(2,2))\n",
+    "    h2 = nd.flatten(h2)\n",
+    "    # first fullc\n",
+    "    h3_linear = nd.dot(h2, params[4]) + params[5]\n",
+    "    h3 = nd.relu(h3_linear)\n",
+    "    # second fullc\n",
+    "    yhat = nd.dot(h3, params[6]) + params[7]\n",
+    "    return yhat\n",
+    "\n",
+    "loss = gluon.loss.SoftmaxCrossEntropyLoss()\n",
+    "\n",
+    "# plain SGD\n",
+    "def SGD(params, lr):\n",
+    "    for p in params:\n",
+    "        p[:] = p - lr * p.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== copy b1 to GPU(0) ===\n",
+      "weight = \n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.]\n",
+      "<NDArray 20 @gpu(0)>\n",
+      "grad = \n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "  0.  0.]\n",
+      "<NDArray 20 @gpu(0)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_params(params, ctx):\n",
+    "    new_params = [p.copyto(ctx) for p in params]\n",
+    "    for p in new_params:\n",
+    "        p.attach_grad()\n",
+    "    return new_params\n",
+    "\n",
+    "new_params = get_params(params, gpu(0))\n",
+    "print('=== copy b1 to GPU(0) ===\\nweight = {}\\ngrad = {}'.format(\n",
+    "    new_params[1], new_params[1].grad))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== before allreduce ===\n",
+      " [\n",
+      "[[ 1.  1.]]\n",
+      "<NDArray 1x2 @gpu(0)>, \n",
+      "[[ 2.  2.]]\n",
+      "<NDArray 1x2 @gpu(1)>, \n",
+      "[[ 3.  3.]]\n",
+      "<NDArray 1x2 @gpu(2)>, \n",
+      "[[ 4.  4.]]\n",
+      "<NDArray 1x2 @gpu(3)>]\n",
+      "\n",
+      "=== after allreduce ===\n",
+      " [\n",
+      "[[ 10.  10.]]\n",
+      "<NDArray 1x2 @gpu(0)>, \n",
+      "[[ 10.  10.]]\n",
+      "<NDArray 1x2 @gpu(1)>, \n",
+      "[[ 10.  10.]]\n",
+      "<NDArray 1x2 @gpu(2)>, \n",
+      "[[ 10.  10.]]\n",
+      "<NDArray 1x2 @gpu(3)>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def allreduce(data):\n",
+    "    # sum on data[0].context, and then broadcast\n",
+    "    for i in range(1, len(data)):\n",
+    "        data[0][:] += data[i].copyto(data[0].context)\n",
+    "    for i in range(1, len(data)):\n",
+    "        data[0].copyto(data[i])\n",
+    "\n",
+    "data = [nd.ones((1,2), ctx=gpu(i))*(i+1) for i in range(4)] # 4 GPUs\n",
+    "print(\"=== before allreduce ===\\n {}\".format(data))\n",
+    "allreduce(data)\n",
+    "print(\"\\n=== after allreduce ===\\n {}\".format(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== original data ===\n",
+      "[[  0.   1.   2.   3.]\n",
+      " [  4.   5.   6.   7.]\n",
+      " [  8.   9.  10.  11.]\n",
+      " [ 12.  13.  14.  15.]]\n",
+      "<NDArray 4x4 @cpu(0)>\n",
+      "\n",
+      "=== splitted into [gpu(0), gpu(1), gpu(2), gpu(3)] ===\n",
+      "[[ 0.  1.  2.  3.]]\n",
+      "<NDArray 1x4 @gpu(0)>\n",
+      "\n",
+      "[[ 4.  5.  6.  7.]]\n",
+      "<NDArray 1x4 @gpu(1)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def split_and_load(data, ctx):\n",
+    "    n, k = data.shape[0], len(ctx)\n",
+    "    assert (n//k)*k == n, '# examples is not divided by # devices'\n",
+    "    idx = list(range(0, n+1, n//k))\n",
+    "    return [data[idx[i]:idx[i+1]].as_in_context(ctx[i]) for i in range(k)]\n",
+    "\n",
+    "batch = nd.arange(16).reshape((4,4))\n",
+    "print('=== original data ==={}'.format(batch))\n",
+    "ctx = [gpu(0), gpu(1), gpu(2), gpu(3)]\n",
+    "splitted = split_and_load(batch, ctx)\n",
+    "print('\\n=== split into {} ==={}\\n{}'.format(ctx, splitted[0], splitted[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_batch(batch, params, ctx, lr):\n",
+    "    # split the data batch and load them on GPUs\n",
+    "    data = split_and_load(batch.data[0], ctx)\n",
+    "    label = split_and_load(batch.label[0], ctx)\n",
+    "    # run forward on each GPU\n",
+    "    with gluon.autograd.record():\n",
+    "        losses = [loss(lenet(X, W), Y)\n",
+    "                  for X, Y, W in zip(data, label, params)]\n",
+    "    # run backward on each gpu\n",
+    "    for l in losses:\n",
+    "        l.backward()\n",
+    "    # aggregate gradient over GPUs\n",
+    "    for i in range(len(params[0])):\n",
+    "        allreduce([params[c][i].grad for c in range(len(ctx))])\n",
+    "    # update parameters with SGD on each GPU\n",
+    "    for p in params:\n",
+    "        SGD(p, lr/batch.data[0].shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid_batch(batch, params, ctx):\n",
+    "    data = batch.data[0].as_in_context(ctx[0])\n",
+    "    pred = nd.argmax(lenet(data, params[0]), axis=1)\n",
+    "    return nd.sum(pred == batch.label[0].as_in_context(ctx[0])).asscalar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mxnet.test_utils import get_mnist\n",
+    "from mxnet.io import NDArrayIter\n",
+    "import mxnet as mx\n",
+    "from mxnet import autograd\n",
+    "\n",
+    "def run(num_gpus, batch_size, lr):\n",
+    "    # the list of GPUs will be used\n",
+    "    ctx = [gpu(i) for i in range(num_gpus)]\n",
+    "    print('Running on {}'.format(ctx))\n",
+    "\n",
+    "    # data iterator\n",
+    "    mnist = get_mnist()\n",
+    "    train_data = NDArrayIter(mnist[\"train_data\"], mnist[\"train_label\"], batch_size)\n",
+    "    valid_data = NDArrayIter(mnist[\"test_data\"], mnist[\"test_label\"], batch_size)\n",
+    "    print('Batch size is {}'.format(batch_size))\n",
+    "\n",
+    "    # copy parameters to all GPUs\n",
+    "    dev_params = [get_params(params, c) for c in ctx]\n",
+    "    for epoch in range(5):\n",
+    "        # train\n",
+    "        start = time()\n",
+    "        train_data.reset()\n",
+    "        for batch in train_data:\n",
+    "            train_batch(batch, dev_params, ctx, lr)\n",
+    "        nd.waitall()  # wait all computations are finished to benchmark the time\n",
+    "        print('Epoch %d, training time = %.1f sec'%(epoch, time()-start))\n",
+    "\n",
+    "        # validating\n",
+    "        valid_data.reset()\n",
+    "        correct, num = 0.0, 0.0\n",
+    "        for batch in valid_data:\n",
+    "            correct += valid_batch(batch, dev_params, ctx)\n",
+    "            num += batch.data[0].shape[0]\n",
+    "        print('         validation accuracy = %.4f'%(correct/num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on [gpu(0)]\n",
+      "Batch size is 64\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'mxnet.gluon' has no attribute 'autograd'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-0d38b210bc8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-34-1108f9b6016a>\u001b[0m in \u001b[0;36mrun\u001b[0;34m(num_gpus, batch_size, lr)\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m             \u001b[0mtrain_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdev_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m         \u001b[0mnd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwaitall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# wait all computations are finished to benchmark the time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Epoch %d, training time = %.1f sec'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-b167feedd62c>\u001b[0m in \u001b[0;36mtrain_batch\u001b[0;34m(batch, params, ctx, lr)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msplit_and_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# run forward on each GPU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mgluon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         losses = [loss(lenet(X, W), Y)\n\u001b[1;32m      8\u001b[0m                   for X, Y, W in zip(data, label, params)]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'mxnet.gluon' has no attribute 'autograd'"
+     ]
+    }
+   ],
+   "source": [
+    "run(1, 64, 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
